--- a/TDM_OnLineStore_Angular.Web/ClientApp/src/app/nav-menu/nav-menu.component.css
+++ b/TDM_OnLineStore_Angular.Web/ClientApp/src/app/nav-menu/nav-menu.component.css
@@ -16,3 +16,14 @@ html {
 .box-shadow {
   box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
 }
+
+.img-size-sm {
+  width: 70px;
+}
+
+.img-box {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+
