--- a/TDM_OnLineStore_Angular.Web/ClientApp/src/app/user/login/login.component.html
+++ b/TDM_OnLineStore_Angular.Web/ClientApp/src/app/user/login/login.component.html
@@ -4,11 +4,13 @@
     <label for="inputEmail" class="sr-only">Email</label>     <!--     sr-only => Shows the lable only for desability browser-->
     <input type="email" id="inputEmail"
            name="email" placeholder="Inform your Email"
-           class="form-control mb-2" [(ngModel)]="user.email"
-           #email="ngModel" email required />
+           class="form-control mb-2"
+           [ngClass]="{
+              'is-invalid':email.invalid && (email.dirty || email.touched),
+              'is-valid':email.valid && (email.dirty || email.touched) }"
+           [(ngModel)]="user.email" #email="ngModel" email required />
 
-    <!--<div class="invalid-feedback mb-2" *ngIf="email.invalid && (email.dirty || email.touched)">-->
-    <div class="alert alert-danger" *ngIf="email.invalid && (email.dirty || email.touched)">
+    <div class="invalid-feedback mb-2" *ngIf="email.invalid && (email.dirty || email.touched)">
       <div *ngIf="email.errors.required">
         Email must be informed!
       </div>
@@ -20,11 +22,13 @@
     <label for="inputPassword" class="sr-only">Password</label>
     <input type="password" id="inputPassword"
            name="password" placeholder="Password"
-           class="form-control mb-2" [(ngModel)]="user.password"
-           #password="ngModel" required />
+           class="form-control mb-2"
+            [ngClass]="{
+              'is-invalid':password.invalid && (password.dirty || password.touched),
+              'is-valid':password.valid && (password.dirty || password.touched) }"
+           [(ngModel)]="user.password" #password="ngModel" required />
 
-    <!--<div class="invalid-feedback mb-2" *ngIf="password.invalid && (password.dirty || password.touched)">-->
-    <div class="alert alert-danger" *ngIf="password.invalid && (password.dirty || password.touched)">
+    <div class="invalid-feedback mb-2" *ngIf="password.invalid && (password.dirty || password.touched)">
       <div *ngIf="password.errors.required">
         Password must be informed!
       </div>
@@ -48,11 +52,7 @@
 
 
 
-<!--[ngClass]="{
- 'is-invalid':email.invalid && (email.dirty || email.touched),
- 'is-valid':email.valid && (email.dirty || email.touched)
-}"
--->
+
 
 <!--
   
