--- a/TDM_OnLineStore_Angular.Web/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/TDM_OnLineStore_Angular.Web/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -24,8 +24,11 @@
           <li class="nav-item" [routerLinkActive]='["link-active"]'>
             <a class="nav-link text-dark" [routerLink]='["/products"]'>Product</a>
           </li>
-          <li class="nav-item" [routerLinkActive]='["link-active"]'>
+          <li class="nav-item" [routerLinkActive]='["link-active"]' *ngIf="!userIsAuthenticated()">
             <a class="nav-link text-dark" [routerLink]='["/login"]'>Login</a>
+          </li>
+          <li class="nav-item" [routerLinkActive]='["link-active"]' *ngIf="userIsAuthenticated()">
+            <a class="nav-link text-dark" [routerLink]='[""]' (click)="logout()">Logout</a>
           </li>
         </ul>
       </div>
